--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -1,6 +1,7 @@
 .row-messages {
-    flex-Direction: column;
+    flex-direction: column;
     position: absolute;
+    max-height: 90%;
     height: 90%;
     width: 55%;
 }
@@ -26,4 +27,10 @@
 
 .card-received {
     background-color: #61aceb;
+}
+
+.center-col {
+    flex: 1;
+    background: rgb(255, 255, 255);
+    overflow-y: scroll;
 }
